header and slick problems

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // SASS style sheet */
 // Palette color codes */
-// Palette URL: http://paletton.com/#uid=21l0u0kw0w0jyC+oRxVy4oIDfjr */
+// Palette URL: http://paletton.com/#uid=51l0u0kw0w0jyC+oRxVy4oIDfjr */
 
 // Feel free to copy&paste color codes to your application */
 
@@ -10,16 +10,13 @@
 $color-primary-0: #FFCD00;
 $color-primary-1: #FFE063;
 $color-primary-2: #FFD839;
-$color-primary-3: #C59E00;
-$color-primary-4: #9B7C00;
 
-$color-complement-0: #3016B0;
-$color-complement-1: #6D5BC4;
-$color-complement-2: #4F3AB5;
-$color-complement-3: #241088;
-$color-complement-4: #1A0A6B;
+$color-secondary-0: #FFA200;
+$color-secondary-1: #FFC663;
+$color-secondary-2: #FFB739;
+$color-secondary-3: #C57D00;
 
-$primary-color-text:   #FFFFFF;
-$primary-text-color:   #212121;
+$primary-color-text: #FFFFFF;
+$primary-text-color: #212121;
 $secondary-text-color: #757575;
-$divider-color:        #BDBDBD;
+$divider-color: #BDBDBD;
