--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -48,21 +48,20 @@ h1 {
     padding: 0 3rem;
 }
 
-.h2 {
+h2 {
     font-family: $font-heading;
     font-size: 3.6rem;
     line-height: 1.25em;
-    &__about {
-
-    }
 }
 
-.p {
+h3 {
+    font-family: $font-heading;
+    font-size: 2.8rem;
+    line-height: 1.25em;
+}
+
+p {
     font-family: $font;
     font-size: 1.6rem;
     line-height: 1.375em;
-
-    &__header {
-        margin-bottom: 1rem;
-    }
 }
