--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -2,6 +2,7 @@
     text-decoration: none;
     font-family: $font-heading;
     font-weight: bold;
+    transition: .3s;
 
     &__big {
         background-color: $color-secondary-0;
@@ -10,5 +11,8 @@
         font-size: 3.6rem;
         margin-top: 3.2rem;
         border-radius: 100px;
+        &:hover {
+            transform: scale(1.1)
+        }
     }
 }
