--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -1,17 +1,52 @@
 .about {
-    width: 100vw;
     display: grid;
     grid-template-columns: 50% 50%;
+    grid-column-gap: 4rem;
+
+    padding: 10rem 6rem;
+    padding-right: 8rem;
+    background-image: linear-gradient(rgba($color-primary-1, 0.9), rgba($color-primary-1, 0.9)), url('assets/images/bg1.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+
 
     &__textbox {
         grid-column: 1;
+        display: flex;
+        flex-direction: column;
     }
-    
     &__box {
         grid-column: 2;
     }
-
-    &__slick {
+    &__header {
+        align-self: center;
+        border-bottom: 3px solid $color-secondary-0;
+        padding: 0 3rem;
+    }
+    &__p {
+        margin-bottom: 1rem;
+    }
+    &__slick-image {
         width: 100%;
+        height: auto;
+    }
+    &__icon {
+        width: 50px;
+        height: 50px;
+        background-color: $color-secondary-0;
+        padding: .5rem;
+        border-radius: 7px;
+        &--prev {
+            position: absolute;
+            top: 45%;
+            left: 0;
+            z-index: 10;
+        }
+        &--next {
+            position: absolute;
+            top: 45%;
+            right: 0;
+        }
     }
 }
