--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -2,7 +2,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 10rem 6rem;
-    background-color: $color-primary-1;
+    background-image: linear-gradient(rgba($color-primary-1, 0.9), rgba($color-primary-1, 0.9)), url('assets/images/bg2.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
 
 
     &__box {
