--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -6,6 +6,7 @@
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
+    align-items: center;
 
 
     &__box {
@@ -13,6 +14,12 @@
         grid-auto-rows: min-content;
         justify-items: center;
         align-items: center;
+    }
+
+    &__map {
+        position: relative;
+        width: 100%;
+        height: 450px;
     }
 
     &__header {
@@ -33,6 +40,7 @@
         width: 45px;
         height: 45px;
         transition: .3s;
+
         &:hover {
             transform: scale(1.1);
         }
@@ -43,7 +51,7 @@
 
         &--instagram {
             fill: #c32aa3;
-            margin-left: 1rem;
+            margin-left: 2rem;
         }
     }
 }
