--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,8 +8,10 @@
   'base/utilities',
   'components/button',
   'components/nav',
+  'components/footer',
   'layout/header',
   'layout/about',
   'layout/menu',
   'layout/contact',
-  'vendors/slick';
+  'vendors/slick',
+  'vendors/aos';
