--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -10,20 +10,28 @@
 
     &__list {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(1rem, 1fr));
-        grid-column-gap: 10rem;
+        grid-template-columns: repeat(3, 1fr);
         align-items: center;
         justify-items: center;
 
         list-style: none;
+    }
+    &__box {
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        align-items: center;
+        justify-items: center;
+        justify-content: space-around;
     }
     &__logo {
         width: 8rem;
         height: auto;
     }
     &__icon {
-        width: 45px;
-        height: 45px;
+        width: 35px;
+        height: 35px;
         transition: .3s;
         &:hover {
             transform: scale(1.1);
@@ -35,7 +43,7 @@
 
         &--instagram {
             fill: #c32aa3;
-            margin-left: 2rem;
+            margin-left: .5rem;
         }
     }
     &__link {
@@ -51,6 +59,6 @@
         }
     }
     &__phone {
-        font-size: 2.8rem;
+        font-size: 1.8rem;
     }
 }
