--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -10,20 +10,10 @@
 
     &__list {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-auto-flow: column;
         align-items: center;
         justify-items: center;
-
         list-style: none;
-    }
-    &__box {
-        width: 100%;
-        height: 100%;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        align-items: center;
-        justify-items: center;
-        justify-content: space-around;
     }
     &__logo {
         width: 8rem;
@@ -54,11 +44,12 @@
         color: black;
         outline: none;
         transition: .3s;
+        border-bottom: 3px solid $color-secondary-0;
         &:hover {
             font-size: 2rem;
         }
     }
     &__phone {
-        font-size: 1.8rem;
+        font-size: 2.4rem;
     }
 }
