--- a/src/scss/layout/_menu.scss
+++ b/src/scss/layout/_menu.scss
@@ -1,5 +1,9 @@
 .menu {
     padding: 10rem 4rem;
+    @include respond(phone) {
+        // Media query
+        padding: 8rem 4rem;
+    }
     background-color: $color-primary-0;
 
 
@@ -18,6 +22,7 @@
     &__item {
         display: grid;
         align-items: center;
+        grid-column-gap: 2rem;
         border-bottom: 3px solid $color-secondary-0;
     }
     &__item-name {
