--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -43,9 +43,10 @@ h1 {
     font-family: $font-heading;
     font-size: 4.8rem;
     line-height: 1.05em;
-    margin-top: 0;
-    border-bottom: 3px solid $color-secondary-0;
+
+    margin: 0;
     padding: 0 3rem;
+    border-bottom: 3px solid $color-secondary-0;
 }
 
 h2 {
