--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,40 +1,109 @@
 .nav {
-    width: 100%;
-    padding: 1rem;
-    position: sticky;
     top: 0;
-    z-index: 10000;
+    width: 100%;
+    position: sticky;
+    z-index: 10;
+
+    padding: 1rem;
     background-color: $color-primary-2;
     border: 5px solid $color-secondary-0;
     
-
+    // Layout
     &__list {
         display: grid;
-        grid-auto-flow: column;
         align-items: center;
         justify-items: center;
+        grid-template-columns: repeat(7, auto);
+        @include respond(tab-port) {
+            // Media query
+            grid-template-columns: auto 1fr 1fr 1fr;
+            grid-template-rows: auto auto;
+            grid-gap: 1rem;
+            @include respond(phone) {
+                // Media query
+                grid-gap: .5rem
+            }
+        }
+        @include respond(ie11) {
+            // Media query
+            grid-template-columns: repeat(7, 1fr);
+        }
+
+        // Style
         list-style: none;
     }
+    &__item {
+        &--1{
+            grid-column: 1;
+            grid-row: 1;
+            @include respond(tab-port) {
+                // Media query
+                grid-column: 1;
+                grid-row: 1 / 3;
+            }
+        }
+        &--2{
+            grid-column: 2;
+            grid-row: 1;
+            // Same on the phone layout
+        }
+        &--3{
+            grid-column: 3;
+            grid-row: 1;
+            // Same on the phone layout
+        }
+        &--4{
+            grid-column: 4;
+            grid-row: 1;
+            // Same on the phone layout
+        }
+        &--5{
+            grid-column: 5;
+            grid-row: 1;
+            @include respond(tab-port) {
+                // Media query
+                grid-column: 2;
+                grid-row: 2;
+                @include respond(phone) {
+                    // Media query
+                    display: none;
+                }
+            }
+        }
+        &--6{
+            grid-column: 6;
+            grid-row: 1;
+            @include respond(tab-port) {
+                // Media query
+                grid-column: 3;
+                grid-row: 2;
+                @include respond(phone) {
+                    // Media query
+                    grid-column: 2;
+                    grid-row: 2;
+                }
+            }
+        }
+        &--7{
+            grid-column: 7;
+            grid-row: 1;
+            @include respond(tab-port) {
+                // Media query
+                grid-column: 4;
+                grid-row: 2;
+                @include respond(phone) {
+                    // Media query
+                    grid-column: 3 / 5;
+                    grid-row: 2;
+                }
+            }
+        }
+    }
+
+    // Style
     &__logo {
         width: 8rem;
         height: auto;
-    }
-    &__icon {
-        width: 35px;
-        height: 35px;
-        transition: .3s;
-        &:hover {
-            transform: scale(1.1);
-        }
-
-        &--facebook {
-            fill: #3b5998;
-        }
-
-        &--instagram {
-            fill: #c32aa3;
-            margin-left: .5rem;
-        }
     }
     &__link {
         font-family: $font;
@@ -49,7 +118,42 @@
             font-size: 2rem;
         }
     }
+    &__time {
+        text-align: center;
+    }
+    &__icon {
+        width: 35px;
+        height: 35px;
+        @include respond(phone) {
+            // Media query
+            width: 30px;
+            height: 30px;
+        }
+
+        transition: .3s;
+        &:hover {
+            transform: scale(1.1);
+        }
+
+        &--facebook {
+            fill: #3b5998;
+        }
+
+        &--instagram {
+            margin-left: .5rem;
+
+            fill: #c32aa3;
+        }
+    }
     &__phone {
-        font-size: 2.4rem;
+        font-size: 2.8rem;
+        @include respond(tab-port) {
+            // Media query
+            font-size: 2.4rem;
+            @include respond(phone) {
+                // Media query
+                font-size: 2.2rem;
+            }
+        }
     }
 }
