--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,37 +1,79 @@
 .header {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-items: center;
     grid-column-gap: 4rem;
-
+    grid-row-gap: 2rem;
+    @include respond(tab-land) {
+        // Media query
+        grid-column-gap: 2rem;        
+    }
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
     @include respond(tab-port) {
         // Media query
-        grid-template-rows: 1fr auto;
         grid-template-columns: auto;
+        grid-template-rows: auto 1fr auto;
+        grid-row-gap: 4rem;
     }
 
-    padding: 10rem 6rem;
-    @include respond(phone) {
-        // Media query
-        padding: 8rem 4rem;
-    }
+    // Style
+    @include sec-padding();
     background-color: $color-primary-0;
 
-    &__img {
-        width: 100%;
-        height: auto;
-        border-radius: 7px;
-    }
-    &__text {
-        display: grid;
-        grid-template-rows: 1fr auto;
-        align-items: center;
-        justify-items: center;
+    // Header layout
+    &__item {
+        &--heading {
+            grid-column: 1 / 3;
+            grid-row: 1;
+            @include respond(tab-port) {
+                // Media query
+                grid-column: 1;
+                grid-row: 1;
+            }
+        }
+        &--img {
+            grid-column: 1;
+            grid-row: 2;
+            @include respond(tab-port) {
+                // Media query
+                grid-column: 1;
+                grid-row: 2;
+            }
 
-        padding: 3rem;
-        border-radius: 7px;
-    }
+            // Style
+            width: 100%;
+            height: auto;
+            border-radius: 7px;
+        }
+        &--textbox {
+            grid-column: 2;
+            grid-row: 2;
+            @include respond(tab-port) {
+                // Media query
+                grid-column: 1;
+                grid-row: 3;
+            }
+
+            display: grid;
+            align-items: center;
+            justify-items: center;
+            grid-template-rows: auto auto;
     
-    &__p {
-        margin-bottom: 1rem;
+            // Style
+            border-radius: 7px;
+        }
+    }
+
+    // Text box layout
+    &__textbox-item {
+        &--1 {
+            grid-column: 1;
+            grid-row: 1;
+        }
+        &--2 {
+            grid-column: 1;
+            grid-row: 2;
+        }
     }
 }
