pre-radical-slick

--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -1,53 +1,41 @@
 .about {
+    width: 100%;
     display: grid;
-    grid-template-columns: 50% 50%;
-    @include respond(tab-port) {
-        // Media query
-        grid-template-rows: 50% 50%;
-        grid-template-columns: 100%;
-    }
+    align-items: center;
+    justify-items: center;
     grid-column-gap: 4rem;
+    grid-template-columns: 1fr minmax(0, 1fr);
+    grid-template-areas: "heading heading" "textbox slick";
 
-    padding: 10rem 6rem;
-    @include respond(phone) {
-        // Media query
-        padding: 8rem 4rem;
-    }
-    padding-right: 8rem;
+    // Style
+    @include sec-padding();
     background-image: linear-gradient(rgba($color-primary-1, 0.9), rgba($color-primary-1, 0.9)), url('assets/images/bg1.jpg');
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
 
 
-    &__textbox {
-        grid-column: 1;
-        @include respond(tab-port) {
-            // Media query
-            grid-column: 1;
-            grid-row: 2;
+    &__item {
+        &--heading {
+            grid-area: heading;
+
+            align-self: center;
+            margin-bottom: 3.2rem;
+            padding: 0 3rem;
+            border-bottom: 3px solid $color-secondary-0;
         }
-        display: flex;
-        flex-direction: column;
-    }
-    &__box {
-        grid-column: 2;
-        @include respond(tab-port) {
-            // Media query
-            grid-column: 1;
-            grid-row: 1;
+        &--textbox {
+            grid-area: textbox;
+        }
+        &--slick {
+            grid-area: slick;
         }
     }
-    &__header {
-        align-self: center;
-        border-bottom: 3px solid $color-secondary-0;
-        padding: 0 3rem;
-    }
-    &__p {
-        margin-bottom: 1rem;
-    }
+
+
+
     &__slick-image {
-        width: 100%;
+        width: 500px;
         height: auto;
     }
     &__icon {
