--- a/src/scss/layout/_menu.scss
+++ b/src/scss/layout/_menu.scss
@@ -1,9 +1,5 @@
 .menu {
-    padding: 10rem 4rem;
-    @include respond(phone) {
-        // Media query
-        padding: 8rem 4rem;
-    }
+    @include sec-padding();
     background-color: $color-primary-0;
 
 
@@ -14,6 +10,7 @@
     &__list {
         display: grid;
         grid-row-gap: 3rem;
+
         border: 5px solid $color-secondary-0;
         padding: 4rem;
     }
@@ -22,27 +19,48 @@
     &__item {
         display: grid;
         align-items: center;
+        justify-items: center;
         grid-column-gap: 2rem;
+        grid-row-gap: 1rem;
+
         border-bottom: 3px solid $color-secondary-0;
     }
     &__item-name {
+        justify-self: center;
         grid-column: 1 / 3;
         grid-row: 1;
+
+        padding: 0 2rem;
+        border-bottom: 1px solid $color-secondary-0;
     }
-    &__dur-price {
+    &__text {
         grid-column: 1;
         grid-row: 2;
+        @include respond(phone) {
+            // Media query
+            grid-column: 1;
+            grid-row: 2;
+        }
     }
-    &__desc {
-        grid-column: 1;
-        grid-row: 3;
-    }
-
-
     &__table {
+        grid-column: 2;
+        grid-row: 2;
+        @include respond(phone) {
+            // Media query
+            grid-column: 1;
+            grid-row: 3;
+        }
+
         display: grid;
         align-items: center;
         justify-items: end;
+    }
+    &__duration {
+        font-weight: bold;
+        text-align: center;
+    }
+    &__desc {
+        text-align: center;
     }
 }
 
