work in ie11 :star:

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -98,6 +98,10 @@
                 }
             }
         }
+        @include respond(ie11) {
+            // Media query
+            align-self: center;
+        }
     }
 
     // Style
