--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,4 +1,3 @@
-/* josefin-sans-300 - latin-ext */
 @font-face {
     font-family: 'Josefin Sans';
     font-style: normal;
@@ -10,7 +9,6 @@
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
-/* josefin-sans-regular - latin-ext */
 @font-face {
     font-family: 'Josefin Sans';
     font-style: normal;
@@ -22,7 +20,6 @@
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
-/* amatic-sc-regular - latin-ext */
 @font-face {
     font-family: 'Amatic SC';
     font-style: normal;
@@ -34,7 +31,6 @@
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
-
 $font-heading: "Amatic SC";
 $font: "Josefin Sans";
 // Fallback:  ,"Lucida Grande", Tahoma, Sans-Serif;
@@ -44,7 +40,7 @@ h1 {
     font-size: 4.8rem;
     line-height: 1.05em;
 
-    margin: 0;
+    margin: 0 0 3.2rem 0;
     padding: 0 3rem;
     border-bottom: 3px solid $color-secondary-0;
 }
