--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -60,10 +60,11 @@
     &__slick-image {
         width: 100%;
         height: auto;
+        border-radius: 7px;
     }
     &__icon {
-        width: 15%;
-        height: 15%;
+        width: 12%;
+        height: 12%;
         background-color: $color-secondary-0;
         padding: .5rem;
         border-radius: 7px;
