--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -30,6 +30,12 @@
         grid-auto-rows: min-content;
         justify-items: center;
         align-items: center;
+
+        @include respond(ie11) {
+            // Media query
+            display: flex;
+            flex-direction: column;
+        }
     }
 
     &__map {
