--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -31,6 +31,10 @@
                 grid-column: 1;
                 grid-row: 1;
             }
+            @include respond(ie11) {
+                // Media query
+                justify-self: center;
+            }
         }
         &--img {
             grid-column: 1;
@@ -62,6 +66,13 @@
     
             // Style
             border-radius: 7px;
+
+            @include respond(ie11) {
+                // Media query
+                width: 100%;
+                margin-left: 2rem;
+                position: relative;
+            }
         }
     }
 
@@ -74,6 +85,13 @@
         &--2 {
             grid-column: 1;
             grid-row: 2;
+            @include respond(ie11) {
+                // Media query
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%) !important;
+            }
         }
     }
 }
