--- a/src/scss/layout/_menu.scss
+++ b/src/scss/layout/_menu.scss
@@ -12,7 +12,13 @@
         grid-row-gap: 3rem;
 
         border: 5px solid $color-secondary-0;
-        padding: 4rem;
+        padding: 1rem;
+
+        @include respond(ie11) {
+            // Media query
+            display: flex;
+            flex-direction: column;
+        }
     }
 
 
@@ -20,31 +26,54 @@
         display: grid;
         align-items: center;
         justify-items: center;
-        grid-column-gap: 2rem;
-        grid-row-gap: 1rem;
 
         border-bottom: 3px solid $color-secondary-0;
+
+        @include respond(ie11) {
+            // Media query
+            align-self: center;
+            justify-self: center;
+            margin-bottom: 3rem;
+        }
     }
     &__item-name {
-        justify-self: center;
-        grid-column: 1 / 3;
         grid-row: 1;
+        grid-column: 1 / 3;
+        @include respond(phone) {
+            // Media query
+            grid-column: 1;
+        }
+        @include respond(ie11) {
+            // Media query
+            text-align: center;
+        }
 
         padding: 0 2rem;
         border-bottom: 1px solid $color-secondary-0;
     }
-    &__text {
+    &__desc {
         grid-column: 1;
         grid-row: 2;
         @include respond(phone) {
             // Media query
             grid-column: 1;
             grid-row: 2;
+            text-align: center;
+        }
+        justify-self: start;
+        @include respond(ie11) {
+            // Media query
+            margin-right: 2rem;
         }
     }
     &__table {
         grid-column: 2;
         grid-row: 2;
+        &--solo {
+            grid-column: 1 / 3;
+            margin-top: 1rem;
+            justify-self: center;
+        }
         @include respond(phone) {
             // Media query
             grid-column: 1;
@@ -54,13 +83,14 @@
         display: grid;
         align-items: center;
         justify-items: end;
-    }
-    &__duration {
-        font-weight: bold;
-        text-align: center;
-    }
-    &__desc {
-        text-align: center;
+
+        justify-self: end;
+
+        @include respond(ie11) {
+            // Media query
+            display: flex;
+            flex-direction: column;
+        }
     }
 }
 
