speed test state

--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -13,6 +13,7 @@
     background-image: linear-gradient(rgba($color-primary-1, 0.9), rgba($color-primary-1, 0.9)), url('assets/images/bg2.jpg');
     background-attachment: fixed;
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     align-items: center;
 
