--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -18,6 +18,7 @@
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 
 
     &__item {
